--- a/Statistiques.html
+++ b/Statistiques.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="bn">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -210,29 +210,29 @@
         import { getAuth } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js";
 
         const firebaseConfig = {
-  apiKey: "AIzaSyCrPKQOqw4zciASa_5PbI_etfkvrBaDPDI",
-  authDomain: "genz-abb36.firebaseapp.com",
-  databaseURL: "https://genz-abb36-default-rtdb.firebaseio.com",
-  projectId: "genz-abb36",
-  storageBucket: "genz-abb36.firebasestorage.app",
-  messagingSenderId: "405021535683",
-  appId: "1:405021535683:web:ee5a28fde27f5558046176",
-  measurementId: "G-XZNQND2J00"
-};
+            apiKey: "AIzaSyCrPKQOqw4zciASa_5PbI_etfkvrBaDPDI",
+            authDomain: "genz-abb36.firebaseapp.com",
+            databaseURL: "https://genz-abb36-default-rtdb.firebaseio.com",
+            projectId: "genz-abb36",
+            storageBucket: "genz-abb36.firebasestorage.app",
+            messagingSenderId: "405021535683",
+            appId: "1:405021535683:web:ee5a28fde27f5558046176",
+            measurementId: "G-XZNQND2J00"
+        };
 
         const app = initializeApp(firebaseConfig);
         const db = getDatabase(app);
         const auth = getAuth();
 
-        let allData = {}; // Stocker les données globales
+        let allData = {}; // গ্লোবাল ডেটা সংরক্ষণ
 
         function fetchData() {
             const birthdatesRef = ref(db, 'birthdates');
             onValue(birthdatesRef, (snapshot) => {
-                allData = snapshot.val() || {}; // Stocker les données dans une variable globale
-                console.log(allData); // Afficher les données récupérées
-                updateCountries(); // Mettre à jour les pays disponibles
-                updateCards(); // Mettre à jour les cartes avec les données
+                allData = snapshot.val() || {}; // ডেটা গ্লোবাল ভেরিয়েবলে সংরক্ষণ
+                console.log(allData); // প্রাপ্ত ডেটা প্রদর্শন
+                updateCountries(); // উপলব্ধ দেশ আপডেট করুন
+                updateCards(); // ডেটা সহ কার্ড আপডেট করুন
             });
         }
 
@@ -240,13 +240,13 @@
             const countrySelect = document.getElementById('countrySelect');
             const countries = new Set();
 
-            // Récupérer les pays uniques à partir des données
+            // ডেটা থেকে অনন্য দেশগুলি পুনরুদ্ধার করুন
             Object.keys(allData).forEach(userId => {
                 const userData = allData[userId];
-                countries.add(userData.country); // S'assurer que 'country' est une propriété de userData
+                countries.add(userData.country); // নিশ্চিত করুন যে 'country' userData এর একটি বৈশিষ্ট্য
             });
 
-            // Remplir le sélecteur de pays
+            // দেশের নির্বাচনকারী পূরণ করুন
             countries.forEach(country => {
                 const option = document.createElement('option');
                 option.value = country;
@@ -268,42 +268,42 @@
 
         function updateCards() {
             const grid = document.getElementById('grid');
-            grid.innerHTML = ''; // Effacer le contenu actuel
+            grid.innerHTML = ''; // বর্তমান বিষয়বস্তু মুছে ফেলুন
 
             const selectedCountry = document.getElementById('countrySelect').value;
             const selectedCategory = document.getElementById('categorySelect').value;
 
             if (Object.keys(allData).length === 0) {
-                grid.innerHTML = '<p>Aucune donnée trouvée.</p>';
+                grid.innerHTML = '<p>কোন ডেটা পাওয়া যায়নি।</p>';
                 return;
             }
 
             const counts = {};
 
-            // Compter par catégorie
+            // শ্রেণী অনুসারে গণনা করুন
             Object.keys(allData).forEach(userId => {
                 const userData = allData[userId];
                 if (userData.country === selectedCountry || selectedCountry === '') {
                     let key;
                     if (selectedCategory === 'daily') {
-                        key = new Date(userData.date).toLocaleDateString('fr-FR', { weekday: 'long' });
+                        key = new Date(userData.date).toLocaleDateString('bn-BD', { weekday: 'long' });
                     } else if (selectedCategory === 'monthly') {
-                        key = new Date(userData.date).toLocaleDateString('fr-FR', { month: 'long' });
+                        key = new Date(userData.date).toLocaleDateString('bn-BD', { month: 'long' });
                     } else if (selectedCategory === 'yearly') {
                         key = new Date(userData.date).getFullYear();
                     } else if (selectedCategory === 'gender') {
-                        key = userData.gender; // Pour la catégorie 'gender'
+                        key = userData.gender; // 'gender' বিভাগের জন্য
                     } else if (selectedCategory === 'age') {
-                        key = calculateAge(userData.date); // Calculer l'âge
+                        key = calculateAge(userData.date); // বয়স গণনা
                     } else if (selectedCategory === 'population') {
-                        key = userData.country; // Pour la population, utiliser le pays
+                        key = userData.country; // জনসংখ্যার জন্য দেশ ব্যবহার করুন
                     }
 
                     counts[key] = (counts[key] || 0) + 1;
                 }
             });
 
-            // Afficher les cartes
+            // কার্ডগুলি প্রদর্শন করুন
             Object.keys(counts).forEach(key => {
                 const card = document.createElement('div');
                 card.className = 'card small-card';
@@ -311,13 +311,13 @@
                 grid.appendChild(card);
             });
 
-            // Si aucune donnée n'est trouvée
+            // যদি কোনো ডেটা পাওয়া না যায়
             if (grid.innerHTML === '') {
-                grid.innerHTML = '<p>Aucune donnée trouvée.</p>';
+                grid.innerHTML = '<p>কোন ডেটা পাওয়া যায়নি।</p>';
             }
         }
 
-        // Fonction de debounce
+        // ডেবাউন্স ফাংশন
         function debounce(func, wait) {
             let timeout;
             return function(...args) {
@@ -332,26 +332,26 @@
 
             countrySelect.addEventListener('change', debounce(updateCards, 300));
             categorySelect.addEventListener('change', debounce(updateCards, 300));
-            fetchData(); // Charger les données au démarrage
+            fetchData(); // শুরুতে ডেটা লোড করুন
 
-            // Ouvrir le modal de soutien
+            // সাহায্যের মডাল খুলুন
             document.getElementById('supportBtn').onclick = function() {
                 document.getElementById('supportModal').style.display = 'block';
             };
 
-            // Ouvrir le modal FAQ
+            // FAQ মডাল খুলুন
             document.getElementById('faqBtn').onclick = function() {
                 document.getElementById('faqModal').style.display = 'block';
             };
 
-            // Fermer le modal
+            // মডাল বন্ধ করুন
             document.querySelectorAll('.close').forEach(closeButton => {
                 closeButton.onclick = function() {
                     this.closest('.modal').style.display = 'none';
                 };
             });
 
-            // Fermer le modal en cliquant à l'extérieur
+            // বাইরের ক্লিক করে মডাল বন্ধ করুন
             window.onclick = function(event) {
                 const modals = document.querySelectorAll('.modal');
                 modals.forEach(modal => {
@@ -361,27 +361,27 @@
                 });
             };
 
-            // Ouvrir le lien PayPal
+            // PayPal লিঙ্ক খুলুন
             document.getElementById('paypalBtn').onclick = function() {
-                window.location.href = 'https://www.paypal.com/ncp/payment/QN7HEGCSRYJKA';
+                window.location.href = 'https://www.paypal.com/donate/?hosted_button_id=F2EL8FWRAXFSS';
             };
 
-            // Changer la couleur du bouton de soutien chaque seconde
+            // প্রতিটি সেকেন্ডে সাহায্য বোতামের রঙ পরিবর্তন করুন
             const supportButton = document.getElementById('supportBtn');
             let isGreenSupport = false;
 
             setInterval(() => {
-                isGreenSupport = !isGreenSupport; // Alterner la couleur
-                supportButton.style.backgroundColor = isGreenSupport ? 'green' : '#007BFF'; // Changer la couleur
+                isGreenSupport = !isGreenSupport; // রঙ পরিবর্তন করুন
+                supportButton.style.backgroundColor = isGreenSupport ? 'green' : '#007BFF'; // রঙ পরিবর্তন করুন
             }, 700);
 
-            // Changer la couleur du bouton PayPal chaque seconde
+            // PayPal বোতামের রঙ প্রতিটি সেকেন্ডে পরিবর্তন করুন
             const paypalButton = document.getElementById('paypalBtn');
             let isGreenPaypal = false;
 
             setInterval(() => {
-                isGreenPaypal = !isGreenPaypal; // Alterner la couleur
-                paypalButton.style.backgroundColor = isGreenPaypal ? 'green' : '#007BFF'; // Changer la couleur
+                isGreenPaypal = !isGreenPaypal; // রঙ পরিবর্তন করুন
+                paypalButton.style.backgroundColor = isGreenPaypal ? 'green' : '#007BFF'; // রঙ পরিবর্তন করুন
             }, 10000);
         });
     </script>
@@ -394,7 +394,7 @@
     </a>
     <div class="copyright-icon">©️</div>
     <a href="Partage.html">
-        <button class="share-button" aria-label="Partager">
+        <button class="share-button" aria-label="শেয়ার করুন">
             <i class="fas fa-share-alt"></i>
         </button>
     </a>
@@ -403,50 +403,50 @@
 <div class="divider"></div>
 
 <div class="button-container">
-    <button id="faqBtn" class="button" aria-label="Questions fréquentes">
-        <i class="fas fa-question-circle" style="margin-right: 2px;"></i> Questions
+    <button id="faqBtn" class="button" aria-label="প্রায়শই জিজ্ঞাসা করা প্রশ্ন">
+        <i class="fas fa-question-circle" style="margin-right: 2px;"></i> প্রশ্ন
     </button>
-    <button id="supportBtn" class="button" aria-label="Soutien" translate="no">
-        <i class="fas fa-hand-holding-heart" style="margin-right: 5px;"></i> Soutenir
+    <button id="supportBtn" class="button" aria-label="সহায়তা" translate="no">
+        <i class="fas fa-hand-holding-heart" style="margin-right: 5px;"></i> সহায়তা করুন
     </button>
 </div>
 
 <div class="divider"></div>
 
 <div class="dashboard">
-    <select class="country-select" aria-label="Sélectionner un pays" id="countrySelect">
-        <option value="">Tous les pays</option>
-        <!-- Les options de pays seront ajoutées dynamiquement -->
+    <select class="country-select" aria-label="দেশ নির্বাচন করুন" id="countrySelect">
+        <option value="">সব দেশ</option>
+        <!-- দেশগুলোর অপশন ডায়নামিকভাবে যোগ করা হবে -->
     </select>
 
-    <select class="category-select" aria-label="Sélectionner une catégorie" id="categorySelect">
-        <option value="daily">Naissances par jour</option>
-        <option value="monthly">Naissances par mois</option>
-        <option value="yearly">Naissances par an</option>
-        <option value="gender">Genre</option>
-        <option value="age">Âges</option>
-        <option value="population">Population</option>
+    <select class="category-select" aria-label="শ্রেণী নির্বাচন করুন" id="categorySelect">
+        <option value="daily">প্রতি দিন জন্মগ্রহণ</option>
+        <option value="monthly">প্রতি মাস জন্মগ্রহণ</option>
+        <option value="yearly">প্রতি বছর জন্মগ্রহণ</option>
+        <option value="gender">লিঙ্গ</option>
+        <option value="age">বয়স</option>
+        <option value="population">জনসংখ্যা</option>
     </select>
 
     <div class="grid" id="grid">
-        <!-- Les cartes seront générées ici -->
+        <!-- কার্ডগুলি এখানে তৈরি হবে -->
     </div>
 </div>
 
-<!-- Modal de Soutien -->
+<!-- সাহায্যের মডাল -->
 <div id="supportModal" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
-        <p>Merci de soutenir G-Z ! Chaque soutien compte. Grâce à votre aide, nous pouvons continuer à développer ce projet passionnant, créer des analyses innovantes et fournir des statistiques gratuites à un public mondial.</p>
-        <button id="paypalBtn" class="support-button">Soutenir maintenant</button>
+        <p>G-Z কে সমর্থন করার জন্য ধন্যবাদ! প্রতিটি সহায়তা গুরুত্বপূর্ণ। আপনার সাহায্যের মাধ্যমে, আমরা এই উত্তেজনাপূর্ণ প্রকল্পটি চালিয়ে যেতে পারি, নতুন নতুন বিশ্লেষণ তৈরি করতে পারি এবং বিশ্বজুড়ে একটি জনসাধারণকে বিনামূল্যে পরিসংখ্যান প্রদান করতে পারি।</p>
+        <button id="paypalBtn" class="support-button">এখন সহায়তা করুন</button>
     </div>
 </div>
 
-<!-- Modal de Questions Fréquemment Posées -->
+<!-- প্রায়শই জিজ্ঞাসা করা প্রশ্নের মডাল -->
 <div id="faqModal" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
-        Les statistiques sont mises à jour automatiquement avec chaque envoi dans les tableaux.
+        পরিসংখ্যানগুলি টেবিলগুলিতে প্রতিটি জমা দেওয়ার সাথে সাথে স্বয়ংক্রিয়ভাবে আপডেট হয়।
     </div>
 </div>
 
