--- a/Terms.html
+++ b/Terms.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="bn">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -81,79 +81,79 @@
 <header>
     <h1 class="logo-genz" onclick="window.location='index.html';" translate="no">GZ</h1>
     <div style="display: flex; align-items: center;">
-        <div class="conditions-button">Conditions</div>
+        <div class="conditions-button">শর্তাবলী</div>
     </div>
 </header>
 
 <div class="divider"></div>
-<div class="divider-text">Conditions d'utilisation</div>
+<div class="divider-text">ব্যবহারের শর্তাবলী</div>
 <div class="divider"></div>
 
 <div class="content">
-    <p><strong>Dernière mise à jour : 3/9/2025.</strong></p>
-    <p>Bienvenue sur GZ. En accédant à notre application web et en utilisant nos services, vous acceptez ces conditions d'utilisation. Veuillez les lire attentivement. Si vous n'acceptez pas l'une des clauses, nous vous recommandons de ne pas utiliser notre application.</p>
+    <p><strong>সর্বশেষ আপডেট: ৩/৯/২০২৫।</strong></p>
+    <p>GZ-তে স্বাগতম। আমাদের ওয়েব অ্যাপ্লিকেশন অ্যাক্সেস এবং আমাদের পরিষেবাগুলি ব্যবহার করে, আপনি এই ব্যবহার শর্তাবলীতে সম্মত হচ্ছেন। দয়া করে এগুলি সতর্কতার সাথে পড়ুন। যদি আপনি কোন ধারা সম্মত না হন, তবে আমরা সুপারিশ করছি যে আপনি আমাদের অ্যাপ্লিকেশন ব্যবহার করবেন না।</p>
 
-    <h2>1. Objectif de l'application</h2>
-    <p>G-Z est une plateforme gratuite qui permet aux utilisateurs du monde entier de soumettre des informations démographiques (date de naissance, pays de naissance, sexe) afin de générer des statistiques mondiales sur les naissances, et bien plus encore. Notre objectif est de promouvoir une meilleure compréhension des tendances démographiques et de fournir des données accessibles à des fins éducatives, scientifiques et sociales.</p>
+    <h2>১. অ্যাপ্লিকেশনের উদ্দেশ্য</h2>
+    <p>G-Z একটি বিনামূল্যের প্ল্যাটফর্ম যা ব্যবহারকারীদের বিশ্বব্যাপী জনসংখ্যার তথ্য (জন্ম তারিখ, জন্মস্থান, লিঙ্গ) জমা দিতে দেয় যাতে জন্মের উপর বৈশ্বিক পরিসংখ্যান তৈরি করা হয় এবং আরও অনেক কিছু। আমাদের লক্ষ্য জনসংখ্যার প্রবণতাগুলি বোঝার জন্য উন্নত করা এবং শিক্ষামূলক, বৈজ্ঞানিক এবং সামাজিক উদ্দেশ্যে প্রবেশযোগ্য তথ্য প্রদান করা।</p>
 
-    <h2>2. Accès et utilisation des services</h2>
-    <p>L'utilisation de l'application G-Z est soumise aux règles suivantes :</p>
+    <h2>২. পরিষেবার অ্যাক্সেস এবং ব্যবহার</h2>
+    <p>G-Z অ্যাপ্লিকেশন ব্যবহারের জন্য নিম্নলিখিত নিয়মাবলী প্রযোজ্য:</p>
     <ul>
-        <li><strong>Gratuit :</strong> Toutes les fonctionnalités et données de l'application sont gratuites et accessibles à tous. Aucune information ne doit être monétisée ou vendue, directement ou indirectement.</li>
-        <li><strong>Utilisation personnelle ou éducative :</strong> L'application est conçue pour un usage personnel, éducatif ou de recherche non commerciale. Toute tentative d'utiliser nos données ou services à des fins commerciales ou lucratives est strictement interdite.</li>
+        <li><strong>বিনামূল্যে:</strong> অ্যাপ্লিকেশনের সমস্ত বৈশিষ্ট্য এবং ডেটা বিনামূল্যে এবং সকলের জন্য উপলব্ধ। কোন তথ্য সরাসরি বা পরোক্ষভাবে অর্থায়ন বা বিক্রি করা উচিত নয়।</li>
+        <li><strong>ব্যক্তিগত বা শিক্ষামূলক ব্যবহার:</strong> অ্যাপ্লিকেশনটি ব্যক্তিগত, শিক্ষামূলক বা অ-বাণিজ্যিক গবেষণার জন্য ডিজাইন করা হয়েছে। বাণিজ্যিক বা লাভজনক উদ্দেশ্যে আমাদের ডেটা বা পরিষেবাগুলি ব্যবহারের চেষ্টা কঠোরভাবে নিষিদ্ধ।</li>
     </ul>
 
-    <h2>3. Restrictions d'utilisation</h2>
-    <p>En utilisant GZ, vous acceptez de :</p>
+    <h2>৩. ব্যবহার বিধিনিষেধ</h2>
+    <p>GZ ব্যবহার করে, আপনি সম্মত হন:</p>
     <ol>
-        <li>Ne pas utiliser nos données ou services à des fins frauduleuses, illégales ou contraires à l'éthique.</li>
-        <li>Ne pas reproduire, distribuer, vendre ou exploiter les données générées par notre application à des fins commerciales ou lucratives.</li>
-        <li>Ne pas accéder, manipuler ou tenter d'interférer avec les systèmes ou serveurs de G-Z de manière non autorisée.</li>
-        <li>Respecter l'objectif de transparence et d'accès libre de l'application en ne réclamant aucun droit de propriété sur les données générées.</li>
+        <li>আমাদের ডেটা বা পরিষেবাগুলি প্রতারণামূলক, অবৈধ, বা অনৈতিক কার্যকলাপে ব্যবহার করবেন না।</li>
+        <li>আমাদের অ্যাপ্লিকেশন দ্বারা উত্পন্ন ডেটা বাণিজ্যিক বা লাভজনক উদ্দেশ্যে পুনঃনির্মাণ, বিতরণ, বিক্রি, বা শোষণ করবেন না।</li>
+        <li>G-Z এর সিস্টেম বা সার্ভারগুলি অননুমোদিতভাবে অ্যাক্সেস, ম্যানিপুলেট, বা হস্তক্ষেপ করার চেষ্টা করবেন না।</li>
+        <li>উৎপন্ন ডেটার উপর কোনো মালিকানা অধিকার দাবি না করে অ্যাপ্লিকেশনের স্বচ্ছতা এবং বিনামূল্যের অ্যাক্সেসের লক্ষ্যকে সম্মান করুন।</li>
     </ol>
 
-    <h2>4. Droits de propriété intellectuelle</h2>
-    <p>Tous les contenus, codes, designs ou fonctionnalités de l'application G-Z restent la propriété exclusive de ses créateurs. Vous n'acquérez aucun droit de propriété en utilisant l'application. Vous êtes autorisé à consulter, télécharger et utiliser les statistiques uniquement conformément aux règles mentionnées ci-dessus.</p>
+    <h2>৪. বুদ্ধিবৃত্তিক সম্পত্তির অধিকার</h2>
+    <p>G-Z অ্যাপ্লিকেশনের সমস্ত বিষয়বস্তু, কোড, ডিজাইন, বা কার্যকারিতা এর নির্মাতাদের একচেটিয়া সম্পত্তি। অ্যাপ্লিকেশনটি ব্যবহার করে আপনি কোন মালিকানা অধিকার অর্জন করেন না। আপনি উপরের উল্লিখিত নিয়মাবলী অনুসারে পরিসংখ্যানগুলি পরামর্শ, ডাউনলোড এবং ব্যবহার করতে পারবেন।</p>
 
-    <h2>5. Protection des données et anonymat</h2>
-    <p>GZ s'engage à protéger les informations que vous soumettez conformément à notre Politique de confidentialité.</p>
+    <h2>৫. তথ্য সুরক্ষা এবং অজ্ঞাত পরিচয়</h2>
+    <p>GZ আপনার জমা দেওয়া তথ্য সুরক্ষিত রাখতে প্রতিশ্রুতিবদ্ধ আমাদের গোপনীয়তা নীতির অধীনে।</p>
     <ul>
-        <li>Toutes les données sont immédiatement agrégées et anonymisées.</li>
-        <li>Nous ne collectons ni ne stockons d'informations pouvant identifier des utilisateurs individuels.</li>
-        <li>Tout acte de dé-anonymisation ou d'utilisation des données pour identifier un individu est strictement interdit et peut entraîner des sanctions juridiques.</li>
+        <li>সমস্ত ডেটা অবিলম্বে একত্রিত এবং অজ্ঞাত করা হয়।</li>
+        <li>আমরা এমন তথ্য সংগ্রহ বা সংরক্ষণ করি না যা ব্যক্তিগত ব্যবহারকারীদের চিহ্নিত করতে পারে।</li>
+        <li>অজ্ঞাত নামকরণের চেষ্টা করা বা ডেটা ব্যবহার করে একজন ব্যক্তিকে চিহ্নিত করার চেষ্টা কঠোরভাবে নিষিদ্ধ এবং এর ফলে আইনগত শাস্তি হতে পারে।</li>
     </ul>
 
-    <h2>6. Responsabilités de l'utilisateur</h2>
-    <p>En utilisant GZ, vous êtes responsable de :</p>
+    <h2>৬. ব্যবহারকারীর দায়িত্বসমূহ</h2>
+    <p>GZ ব্যবহার করে, আপনি দায়ী:</p>
     <ul>
-        <li>La précision des informations que vous soumettez.</li>
-        <li>L'utilisation des données en conformité avec les lois et réglementations applicables dans votre pays.</li>
-        <li>Ne pas endommager, perturber ou surcharger nos serveurs ou systèmes.</li>
+        <li>আপনার জমা দেওয়া তথ্যের সঠিকতার জন্য।</li>
+        <li>আপনার দেশের প্রযোজ্য আইন এবং বিধিমালার সাথে সঙ্গতি রেখে ডেটার ব্যবহারের জন্য।</li>
+        <li>আমাদের সার্ভার বা সিস্টেমগুলি ক্ষতিগ্রস্ত, বিঘ্নিত, বা ওভারলোড না করার জন্য।</li>
     </ul>
 
-    <h2>7. Limitation de responsabilité</h2>
-    <p>Nous faisons tout notre possible pour garantir la disponibilité et l'exactitude de nos services, mais G-Z ne peut être tenu responsable de :</p>
+    <h2>৭. দায়িত্বের সীমাবদ্ধতা</h2>
+    <p>আমরা আমাদের পরিষেবাগুলির উপলব্ধতা এবং সঠিকতা নিশ্চিত করার জন্য প্রতিটি প্রচেষ্টা করি, তবে G-Z দায়ী নয়:</p>
     <ul>
-        <li>Erreurs, omissions ou interruptions temporaires des services.</li>
-        <li>L'utilisation des données par des tiers d'une manière non conforme à nos conditions.</li>
+        <li>পরিষেবাগুলির ত্রুটি, অভাব, বা অস্থায়ী বিঘ্নের জন্য।</li>
+        <li>আমাদের শর্তাবলী মেনে না চলা তৃতীয় পক্ষের দ্বারা ডেটার ব্যবহারের জন্য।</li>
     </ul>
 
-    <h2>8. Suspension ou résiliation de l'accès</h2>
-    <p>Nous nous réservons le droit de suspendre ou de résilier l'accès à notre application pour tout utilisateur qui enfreint ces conditions, sans préavis ni remboursement (le cas échéant).</p>
+    <h2>৮. অ্যাক্সেস স্থগিত বা বাতিল করা</h2>
+    <p>আমরা যে কোন ব্যবহারকারীর জন্য অ্যাপ্লিকেশনে অ্যাক্সেস স্থগিত বা বাতিল করার অধিকার সংরক্ষণ করি যারা এই শর্তাবলী লঙ্ঘন করে, বিজ্ঞপ্তি বা ফেরত (যদি প্রযোজ্য) ছাড়াই।</p>
 
-    <h2>9. Modifications des conditions</h2>
-    <p>Nous nous réservons le droit de modifier ces conditions d'utilisation à tout moment. Tout changement sera annoncé via notre application ou par d'autres moyens de communication. La poursuite de l'utilisation de l'application après ces changements implique votre acceptation des nouvelles conditions.</p>
+    <h2>৯. শর্তাবলীর সংশোধন</h2>
+    <p>আমরা যে কোন সময় এই ব্যবহার শর্তাবলী পরিবর্তন করার অধিকার সংরক্ষণ করি। কোন পরিবর্তন আমাদের অ্যাপ্লিকেশন বা অন্যান্য যোগাযোগের মাধ্যমে ঘোষণা করা হবে। এই পরিবর্তনের পরে অ্যাপ্লিকেশনটির অব্যাহত ব্যবহার আপনার নতুন শর্তাবলীর গ্রহণযোগ্যতা নির্দেশ করে।</p>
 
-    <h2>10. Droit applicable</h2>
-    <p>Ces conditions sont régies par les lois en vigueur à Washington, D.C., États-Unis. Tout litige relatif à l'utilisation de l'application sera soumis à la compétence exclusive des tribunaux compétents de Washington, D.C.</p>
+    <h2>১০. প্রযোজ্য আইন</h2>
+    <p>এই শর্তাবলী যুক্তরাষ্ট্রের ওয়াশিংটন, ডি.সি. আইন দ্বারা নিয়ন্ত্রিত। অ্যাপ্লিকেশন ব্যবহারের সাথে সম্পর্কিত যে কোন বিরোধ ওয়াশিংটন, ডি.সি. এর সক্ষম আদালতের একচেটিয়া বিচারাধীন হবে।</p>
 
-    <h2>11. Contact</h2>
-    <p>Pour toute question concernant ces conditions d'utilisation, veuillez nous contacter :</p>
-    <p>Email : admin@g-z.online</p>
+    <h2>১১. যোগাযোগ</h2>
+    <p>এই ব্যবহার শর্তাবলী সম্পর্কে কোন প্রশ্নের জন্য আমাদের সাথে যোগাযোগ করুন:</p>
+    <p>ইমেইল: admin@g-z.online</p>
 </div>
 
 <footer>
-    <p>©️ 2025 GZ</p>
+    <p>©️ ২০২৫ GZ</p>
 </footer>
 
 </body>
