--- a/Confidentialité.html
+++ b/Confidentialité.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="bn">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,68 +7,68 @@
     <link href="https://fonts.googleapis.com/css2?family=Billabong&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: #f5f5f5; /* Couleur de fond claire */
+            background-color: #f5f5f5; /* উজ্জ্বল পটভূমি রঙ */
             margin: 0;
             padding: 0;
-            color: #333; /* Couleur du texte */
-            font-family: 'Roboto', Arial, sans-serif; /* Utiliser une police similaire */
+            color: #333; /* টেক্সটের রঙ */
+            font-family: 'Roboto', Arial, sans-serif; /* অনুরূপ ফন্ট ব্যবহার করুন */
         }
         header {
-            background-color: #ffffff; /* Fond blanc */
+            background-color: #ffffff; /* সাদা পটভূমি */
             padding: 5px 10px;
             display: flex;
             align-items: center;
             justify-content: space-between;
             height: 50px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Ombre légère */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* হালকা ছায়া */
         }
         h1 {
             margin: 0;
-            font-size: 1.3em; /* Taille de police ajustée */
+            font-size: 1.3em; /* ফন্ট সাইজ সামঞ্জস্য */
             font-family: 'Billabong', cursive;
-            color: #007BFF; /* Couleur bleue */
+            color: #007BFF; /* নীল রঙ */
         }
         .logo-genz {
-            border: 1.5px solid #007BFF; /* Bord bleu */
-            padding: 3px 6px; /* Padding réduit */
+            border: 1.5px solid #007BFF; /* নীল বর্ডার */
+            padding: 3px 6px; /* প্যাডিং কমানো */
             display: inline-block;
             border-radius: 10px;
             white-space: nowrap;
         }
         .conditions-button {
-            color: #007BFF; /* Couleur bleue */
-            font-size: 0.9em; /* Taille de police réduite */
-            padding: 3px 6px; /* Padding réduit */
-            border: 1px solid #007BFF; /* Bord bleu */
+            color: #007BFF; /* নীল রঙ */
+            font-size: 0.9em; /* ফন্ট সাইজ কমানো */
+            padding: 3px 6px; /* প্যাডিং কমানো */
+            border: 1px solid #007BFF; /* নীল বর্ডার */
             border-radius: 5px;
             margin-left: 5px;
             cursor: pointer;
-            background-color: transparent; /* Fond transparent */
+            background-color: transparent; /* স্বচ্ছ পটভূমি */
             display: flex;
             align-items: center; 
         }
         .divider {
             height: 1px;
-            background-color: #007BFF; /* Bord bleu */
+            background-color: #007BFF; /* নীল বর্ডার */
             width: 100%;
-            margin-top: 0; /* Supprimer la marge supérieure */
+            margin-top: 0; /* উপরের মার্জিন বাদ দিন */
         }
         .divider-text {
             text-align: center;
-            color: #333; /* Couleur du texte */
+            color: #333; /* টেক্সটের রঙ */
             font-size: 0.9em;
             margin: 10px 0; 
         }
         .content {
-            padding: 10px 20px; /* Padding supérieur réduit */
+            padding: 10px 20px; /* উপরের প্যাডিং কমানো */
             font-size: 0.85em;
         }
         .content h2 {
-            font-size: 1.2em; /* Taille réduite pour les titres */
+            font-size: 1.2em; /* শিরোনামের জন্য সাইজ কমানো */
         }
         footer {
             text-align: center;
-            color: #333; /* Couleur du texte */
+            color: #333; /* টেক্সটের রঙ */
             margin: 20px 0;
             font-size: 0.8em;
         }
@@ -81,85 +81,85 @@
         <h1 class="logo-genz" translate="no">GZ</h1>
     </a>
     <div style="display: flex; align-items: center;">
-        <div class="conditions-button">Confidentialité</div>
+        <div class="conditions-button">গোপনীয়তা</div>
     </div>
 </header>
 
 <div class="divider"></div>
-<div class="divider-text">Politique de Confidentialité</div>
+<div class="divider-text">গোপনীয়তার নীতি</div>
 <div class="divider"></div>
 
 <div class="content">
-    <p><strong>Dernière mise à jour : 3/9/2025.</strong></p>
-    <p>Bienvenue dans GZ, une application web dédiée à la génération de statistiques démographiques mondiales. Nous respectons et protégeons votre vie privée. Cette politique de confidentialité décrit les types d'informations que nous collectons, comment nous les utilisons, comment nous les protégeons, et vos droits en tant qu'utilisateur.</p>
+    <p><strong>সর্বশেষ আপডেট : ৩/৯/২০২৫।</strong></p>
+    <p>GZ-তে স্বাগতম, একটি অ্যাপ্লিকেশন যা বৈশ্বিক জনসংখ্যার পরিসংখ্যান তৈরি করতে নিবেদিত। আমরা আপনার গোপনীয়তা সম্মান করি এবং রক্ষা করি। এই গোপনীয়তার নীতি বর্ণনা করে আমরা কোন ধরনের তথ্য সংগ্রহ করি, কীভাবে আমরা সেগুলি ব্যবহার করি, কীভাবে সেগুলি রক্ষা করি, এবং আপনার অধিকারগুলি কী।</p>
 
-    <h2>1. Informations Collectées</h2>
-    <p><strong>a) Informations Fournies Volontairement</strong></p>
-    <p>Lorsque vous utilisez notre application, vous pouvez soumettre volontairement les informations suivantes :</p>
+    <h2>১. সংগ্রহ করা তথ্য</h2>
+    <p><strong>a) স্বেচ্ছায় প্রদত্ত তথ্য</strong></p>
+    <p>যখন আপনি আমাদের অ্যাপ্লিকেশন ব্যবহার করেন, আপনি স্বেচ্ছায় নিম্নলিখিত তথ্য জমা দিতে পারেন:</p>
     <ul>
-        <li>Date de naissance</li>
-        <li>Pays de naissance</li>
-        <li>Genre</li>
+        <li>জন্ম তারিখ</li>
+        <li>জন্মস্থান</li>
+        <li>লিঙ্গ</li>
     </ul>
     
-    <p><strong>b) Aucune Collecte Automatique</strong></p>
-    <p>Nous ne collectons pas automatiquement de données (comme des cookies ou des informations de navigation).</p>
+    <p><strong>b) স্বয়ংক্রিয় সংগ্রহ নেই</strong></p>
+    <p>আমরা স্বয়ংক্রিয়ভাবে কোনো ডেটা (যেমন কুকিজ বা ব্রাউজিং তথ্য) সংগ্রহ করি না।</p>
 
-    <h2>2. Utilisation des Informations</h2>
-    <p>Nous utilisons les informations que vous fournissez exclusivement pour :</p>
+    <h2>২. তথ্যের ব্যবহার</h2>
+    <p>আমরা আপনার প্রদত্ত তথ্যগুলি শুধুমাত্র নিম্নলিখিত উদ্দেশ্যে ব্যবহার করি:</p>
     <ul>
-        <li>Analyser et générer des statistiques anonymes sur les naissances (par jour, mois, année, pays, genre, âge, etc.).</li>
-        <li>Identifier des tendances démographiques à des fins éducatives et historiques.</li>
+        <li>জন্মের উপর অজ্ঞাত পরিসংখ্যান বিশ্লেষণ এবং উৎপন্ন করা (প্রতিদিন, মাসে, বছরে, দেশ, লিঙ্গ, বয়স, ইত্যাদি)।</li>
+        <li>শিক্ষামূলক এবং ঐতিহাসিক উদ্দেশ্যে জনসংখ্যার প্রবণতা চিহ্নিত করা।</li>
     </ul>
-    <p>Vos données ne seront jamais utilisées à des fins de marketing, de publicité, ou d'autres fins.</p>
+    <p>আপনার ডেটা কখনও বিপণন, বিজ্ঞাপন, বা অন্যান্য উদ্দেশ্যে ব্যবহার করা হবে না।</p>
 
-    <h2>3. Partage des Informations</h2>
-    <p>Nous ne partageons pas vos informations avec des tiers, sauf dans les cas strictement nécessaires suivants :</p>
+    <h2>৩. তথ্যের ভাগাভাগি</h2>
+    <p>আমরা আপনার তথ্য তৃতীয় পক্ষের সাথে ভাগ করি না, কেবলমাত্র নিম্নলিখিত কঠোরভাবে প্রয়োজনীয় ক্ষেত্রে:</p>
     <ul>
-        <li><strong>Fournisseurs de Services :</strong> Nous utilisons Google Cloud (Firebase) pour héberger vos données et PayPal pour gérer les dons. Ces partenaires s'engagent également à respecter des normes strictes de confidentialité.</li>
-        <li><strong>Conformité Légale :</strong> Si la loi l'exige, nous pouvons être obligés de divulguer vos données pour répondre à des obligations légales.</li>
+        <li><strong>পরিষেবা প্রদানকারী:</strong> আমরা আপনার ডেটা হোস্ট করতে Google Cloud (Firebase) এবং দান পরিচালনার জন্য PayPal ব্যবহার করি। এই অংশীদাররা গোপনীয়তার কঠোর মানগুলি অনুসরণ করতে প্রতিশ্রুতিবদ্ধ।</li>
+        <li><strong>আইনি সম্মতি:</strong> আইনের প্রয়োজনে, আমাদের আপনার ডেটা প্রকাশ করতে বাধ্য হতে পারে।</li>
     </ul>
-    <p>En dehors de ces cas, vos données ne sont ni vendues, ni louées, ni échangées avec quiconque.</p>
+    <p>এই ক্ষেত্রে ছাড়া, আপনার ডেটা বিক্রি, ভাড়া, বা অন্য কারো সাথে বিনিময় করা হয় না।</p>
 
-    <h2>4. Stockage et Sécurité des Données</h2>
-    <p>Vos données sont protégées par des mesures rigoureuses, y compris :</p>
+    <h2>৪. ডেটা সংরক্ষণ ও নিরাপত্তা</h2>
+    <p>আপনার ডেটা কঠোর নিরাপত্তা ব্যবস্থার দ্বারা রক্ষা করা হয়, যার মধ্যে অন্তর্ভুক্ত:</p>
     <ul>
-        <li><strong>Chiffrement :</strong> Toutes les communications entre votre appareil et nos serveurs sont sécurisées via des protocoles SSL/TLS.</li>
-        <li><strong>Hébergement Sécurisé :</strong> Vos données sont stockées sur les serveurs sécurisés de Google Cloud, situés aux États-Unis, qui respectent les normes internationales de protection des données.</li>
+        <li><strong>এনক্রিপশন:</strong> আপনার ডিভাইস এবং আমাদের সার্ভারের মধ্যে সমস্ত যোগাযোগ SSL/TLS প্রোটোকলের মাধ্যমে সুরক্ষিত।</li>
+        <li><strong>নিরাপদ হোস্টিং:</strong> আপনার ডেটা Google Cloud-এর নিরাপদ সার্ভারে সংরক্ষিত, যা আন্তর্জাতিক ডেটা সুরক্ষা মান অনুসরণ করে।</li>
     </ul>
-    <p>Nous nous assurons également que :</p>
+    <p>আমরা নিশ্চিত করি যে:</p>
     <ul>
-        <li>Les données soumises sont immédiatement agrégées et anonymisées.</li>
-        <li>Aucune information n'est traçable à un utilisateur individuel.</li>
+        <li>জমা দেওয়া ডেটা অবিলম্বে একত্রিত এবং অজ্ঞাত করা হয়।</li>
+        <li>কোন তথ্য একটি একক ব্যবহারকারীকে চিহ্নিত করা যায় না।</li>
     </ul>
 
-    <h2>5. Suppression des Données</h2>
-    <p>Vous avez un contrôle total sur vos données :</p>
+    <h2>৫. ডেটা মুছে ফেলা</h2>
+    <p>আপনার ডেটার উপর সম্পূর্ণ নিয়ন্ত্রণ রয়েছে:</p>
     <ul>
-        <li>Après soumission, une icône de réinitialisation apparaît, vous permettant de supprimer vos données à tout moment tant que votre session reste active.</li>
-        <li>Une fois votre session fermée ou expirée, vos données sont irréversiblement anonymisées et ne peuvent plus être supprimées.</li>
+        <li>জমা দেওয়ার পরে, একটি রিসেট আইকন প্রদর্শিত হয়, যা আপনাকে আপনার তথ্য যেকোনো সময় মুছে ফেলতে দেয় যতক্ষণ না আপনার সেশন সক্রিয় থাকে।</li>
+        <li>একবার আপনার সেশন বন্ধ হলে বা মেয়াদ শেষ হলে, আপনার ডেটা অপরিবর্তনীয়ভাবে অজ্ঞাত করা হয় এবং তা আর মুছে ফেলা সম্ভব নয়।</li>
     </ul>
-    <p>Nous conservons ces données agrégées pour des recherches et analyses à long terme. Cependant, en cas de problème majeur ou à votre demande, nous nous engageons à supprimer toutes les données collectées.</p>
+    <p>আমরা এই একত্রিত ডেটা দীর্ঘমেয়াদী গবেষণা এবং বিশ্লেষণের জন্য সংরক্ষণ করি। তবে, গুরুতর সমস্যা ঘটলে বা আপনার অনুরোধে, আমরা সমস্ত সংগৃহীত ডেটা মুছে ফেলার প্রতিশ্রুতি দিচ্ছি।</p>
 
-    <h2>6. Cookies et Technologies Similaires</h2>
-    <p>Nous n'utilisons aucun cookie ni technologie de suivi.</p>
+    <h2>৬. কুকিজ এবং অনুরূপ প্রযুক্তি</h2>
+    <p>আমরা কোনো কুকি বা ট্র্যাকিং প্রযুক্তি ব্যবহার করি না।</p>
 
-    <h2>7. Transferts Internationaux de Données</h2>
-    <p>Vos données peuvent être transférées et stockées aux États-Unis, où se trouvent nos serveurs. Nous veillons à ce que toutes les données soient traitées conformément aux lois internationales sur la protection des données et avec les mêmes niveaux de sécurité.</p>
+    <h2>৭. আন্তর্জাতিক ডেটা স্থানান্তর</h2>
+    <p>আপনার ডেটা মার্কিন যুক্তরাষ্ট্রে স্থানান্তরিত এবং সংরক্ষিত হতে পারে, যেখানে আমাদের সার্ভারগুলি রয়েছে। আমরা নিশ্চিত করি যে সমস্ত ডেটা আন্তর্জাতিক ডেটা সুরক্ষা আইন অনুসারে প্রক্রিয়া করা হয় এবং একই নিরাপত্তার স্তর বজায় থাকে।</p>
 
-    <h2>8. Durée de Conservation</h2>
-    <p>Nous conservons les données anonymisées indéfiniment pour garantir leur utilité pour de futures analyses démographiques. Cependant, aucune donnée identifiable n'est conservée au-delà de la session active de l'utilisateur.</p>
+    <h2>৮. সংরক্ষণকাল</h2>
+    <p>আমরা অজ্ঞাত ডেটা অনির্দিষ্টকালের জন্য সংরক্ষণ করি যাতে ভবিষ্যতে জনসংখ্যার বিশ্লেষণের জন্য এটি উপকারী হয়। তবে, ব্যবহারকারীর সক্রিয় সেশনের বাইরে কোন চিহ্নিত ডেটা সংরক্ষণ করা হয় না।</p>
 
-    <h2>9. Modifications de Cette Politique</h2>
-    <p>Nous pouvons mettre à jour cette politique de confidentialité pour refléter des changements dans nos pratiques ou les lois applicables. Tout changement significatif sera communiqué via notre application ou par e-mail.</p>
+    <h2>৯. এই নীতির পরিবর্তন</h2>
+    <p>আমরা আমাদের অনুশীলন বা প্রযোজ্য আইনগুলির পরিবর্তন প্রতিফলিত করার জন্য এই গোপনীয়তার নীতি আপডেট করতে পারি। যেকোনো উল্লেখযোগ্য পরিবর্তন আমাদের অ্যাপ্লিকেশন বা ইমেইলের মাধ্যমে যোগাযোগ করা হবে।</p>
 
-    <h2>10. Contact</h2>
-    <p>Pour toute question ou préoccupation concernant cette politique de confidentialité, vous pouvez nous contacter :</p>
-    <p>Email : admin@g-z.online</p>
+    <h2>১০. যোগাযোগ</h2>
+    <p>এই গোপনীয়তার নীতি সম্পর্কে যেকোনো প্রশ্ন বা উদ্বেগের জন্য, আপনি আমাদের সাথে যোগাযোগ করতে পারেন:</p>
+    <p>ইমেইল : admin@g-z.online</p>
 </div>
 
 <footer>
-    <p>©️ 2025 <span translate="no">GZ</span></p>
+    <p>©️ ২০২৫ <span translate="no">GZ</span></p>
 </footer>
 
 </body>
