--- a/Contact.html
+++ b/Contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="bn">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -112,9 +112,9 @@
     <div class="divider"></div>
 
     <div class="paragraph-container">
-        <p><strong>Votre avis compte pour nous ! En plus de nos découvertes, nous avons l'opportunité d'explorer des solutions à divers problèmes. Avez-vous des suggestions d'amélioration ou des idées de sujets pour enrichir notre expérience et rendre notre découverte encore plus captivante ? Nous serions ravis de les recevoir ! Veuillez envoyer vos propositions à l'adresse suivante : <a href="mailto:admin@g-z.online">admin@g-z.online</a>.
+        <p><strong>আপনার মতামত আমাদের জন্য গুরুত্বপূর্ণ! আমাদের আবিষ্কারের পাশাপাশি, বিভিন্ন সমস্যার সমাধান অনুসন্ধানের সুযোগ রয়েছে। আপনার কি উন্নতির জন্য কোন সুপারিশ বা আমাদের অভিজ্ঞতা সমৃদ্ধ করার জন্য বিষয়ের ধারণা রয়েছে? আমরা সেগুলি পেতে পেরে খুব খুশি হব! অনুগ্রহ করে আপনার প্রস্তাবগুলি পাঠান এই ঠিকানায়: <a href="mailto:admin@g-z.online">admin@g-z.online</a>।
 
-Si votre idée est sélectionnée, vous serez crédité en tant qu'auteur de cette proposition. Veuillez noter que toutes les propositions doivent être à but non lucratif. Nous vous informerons à la réception et intégrerons avec plaisir vos suggestions. Merci pour votre contribution précieuse !</strong></p>
+যদি আপনার ধারণাটি নির্বাচিত হয়, তবে আপনাকে এই প্রস্তাবনার লেখক হিসেবে স্বীকৃতি দেওয়া হবে। দয়া করে লক্ষ্য করুন যে সমস্ত প্রস্তাবনাগুলি অলাভজনক উদ্দেশ্যে হতে হবে। আমরা গ্রহণের সাথে সাথে আপনাকে অবহিত করব এবং আনন্দের সাথে আপনার প্রস্তাবগুলি অন্তর্ভুক্ত করব। আপনার মূল্যবান অবদানের জন্য ধন্যবাদ!</strong></p>
     </div>
 </body>
 </html>
