--- a/Faq.html
+++ b/Faq.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="bn">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,68 +7,68 @@
     <link href="https://fonts.googleapis.com/css2?family=Billabong&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: #f5f5f5; /* Couleur de fond claire */
+            background-color: #f5f5f5; /* উজ্জ্বল পটভূমি রঙ */
             margin: 0;
             padding: 0;
-            color: #333; /* Couleur du texte */
-            font-family: 'Roboto', Arial, sans-serif; /* Utiliser une police similaire */
+            color: #333; /* টেক্সটের রঙ */
+            font-family: 'Roboto', Arial, sans-serif; /* অনুরূপ ফন্ট ব্যবহার করুন */
         }
         header {
-            background-color: #ffffff; /* Fond blanc */
+            background-color: #ffffff; /* সাদা পটভূমি */
             padding: 5px 10px;
             display: flex;
             align-items: center;
             justify-content: space-between;
             height: 50px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Ombre légère */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* হালকা ছায়া */
         }
         h1 {
             margin: 0;
-            font-size: 1.3em; /* Taille de police ajustée */
+            font-size: 1.3em; /* ফন্ট সাইজ সামঞ্জস্য */
             font-family: 'Billabong', cursive;
-            color: #007BFF; /* Couleur bleue */
+            color: #007BFF; /* নীল রঙ */
         }
         .logo-genz {
-            border: 1.5px solid #007BFF; /* Bord bleu */
-            padding: 3px 6px; /* Remplissage réduit */
+            border: 1.5px solid #007BFF; /* নীল বর্ডার */
+            padding: 3px 6px; /* প্যাডিং কমানো */
             display: inline-block;
             border-radius: 10px;
             white-space: nowrap;
         }
         .faq-button {
-            color: #007BFF; /* Couleur bleue */
-            font-size: 0.9em; /* Taille de police réduite */
-            padding: 3px 6px; /* Remplissage réduit */
-            border: 1px solid #007BFF; /* Bord bleu */
+            color: #007BFF; /* নীল রঙ */
+            font-size: 0.9em; /* ফন্ট সাইজ কমানো */
+            padding: 3px 6px; /* প্যাডিং কমানো */
+            border: 1px solid #007BFF; /* নীল বর্ডার */
             border-radius: 5px;
             margin-left: 5px;
             cursor: pointer;
-            background-color: transparent; /* Fond transparent */
+            background-color: transparent; /* স্বচ্ছ পটভূমি */
             display: flex;
             align-items: center; 
         }
         .divider {
             height: 1px;
-            background-color: #007BFF; /* Bord bleu */
+            background-color: #007BFF; /* নীল বর্ডার */
             width: 100%;
-            margin-top: 0; /* Supprimer la marge supérieure */
+            margin-top: 0; /* উপরের মার্জিন বাদ দিন */
         }
         .divider-text {
             text-align: center;
-            color: #333; /* Couleur du texte */
+            color: #333; /* টেক্সটের রঙ */
             font-size: 0.9em;
             margin: 10px 0; 
         }
         .faq-content {
-            padding: 10px 20px; /* Remplissage supérieur réduit */
+            padding: 10px 20px; /* উপরের প্যাডিং কমানো */
             font-size: 0.85em;
         }
         .faq-content h2 {
-            font-size: 1.2em; /* Taille réduite pour les titres FAQ */
+            font-size: 1.2em; /* FAQ শিরোনামের জন্য সাইজ কমানো */
         }
         footer {
             text-align: center;
-            color: #333; /* Couleur du texte */
+            color: #333; /* টেক্সটের রঙ */
             margin: 20px 0;
             font-size: 0.8em;
         }
@@ -86,69 +86,69 @@
 </header>
 
 <div class="divider"></div>
-<div class="divider-text">FAQ - Questions Fréquemment Posées</div>
+<div class="divider-text">FAQ - প্রায়শই জিজ্ঞাসা করা প্রশ্ন</div>
 <div class="divider"></div>
 
 <div class="faq-content">
-    <h2>1. Qu'est-ce que GZ et à quoi sert-il ?</h2>
-    <p>G-Z est une application web entièrement gratuite qui permet aux utilisateurs de soumettre leur date de naissance, leur pays de naissance et leur sexe sans inscription préalable. Elle est conçue pour générer des statistiques globales et nationales sur les naissances, y compris :</p>
+    <h2>১. GZ কী এবং এটি কী কাজে লাগে?</h2>
+    <p>G-Z একটি সম্পূর্ণ বিনামূল্যে ওয়েব অ্যাপ্লিকেশন যা ব্যবহারকারীদের তাদের জন্ম তারিখ, জন্মস্থান এবং লিঙ্গ জমা দিতে দেয়, কোনও নিবন্ধন ছাড়াই। এটি জন্মের উপর বৈশ্বিক এবং জাতীয় পরিসংখ্যান তৈরি করতে ডিজাইন করা হয়েছে, যার মধ্যে অন্তর্ভুক্ত:</p>
     <ul>
-        <li>Les naissances par jour, mois et année.</li>
-        <li>La répartition par pays, sexe et âge.</li>
+        <li>প্রতিদিন, মাসে এবং বছরে জন্মের সংখ্যা।</li>
+        <li>দেশ, লিঙ্গ এবং বয়স অনুযায়ী বন্টন।</li>
     </ul>
-    <p>Le principal objectif est de fournir des données démographiques accessibles pour une meilleure compréhension des tendances de la population mondiale.</p>
+    <p>প্রধান লক্ষ্য হল জনসংখ্যার বৈশ্বিক প্রবণতাগুলি বোঝার জন্য প্রবেশযোগ্য ডেটা প্রদান করা।</p>
 
-    <h2>2. Mes données sont-elles anonymes ?</h2>
-    <p>Oui, vos données sont complètement anonymes. Nous avons conçu G-Z pour garantir que :</p>
+    <h2>২. কি আমার তথ্য অজ্ঞাত?</h2>
+    <p>হ্যাঁ, আপনার তথ্য সম্পূর্ণরূপে অজ্ঞাত। আমরা G-Z ডিজাইন করেছি যাতে:</p>
     <ul>
-        <li>Aucune donnée ne peut être retracée jusqu'à un utilisateur individuel.</li>
-        <li>Nous ne collectons aucune information qui identifie qui a soumis quoi. Soyez assuré, votre identité est protégée et vos données sont immédiatement agrégées.</li>
-    </ul>
-
-    <h2>3. Comment saurai-je si mes données ont été soumises ?</h2>
-    <p>Une fois vos données soumises :</p>
-    <ul>
-        <li>Le bouton de soumission changera de couleur : orange pendant la soumission et vert une fois la soumission réussie.</li>
-        <li>Le texte du bouton changera de "Soumettre" à "Soumis".</li>
-    </ul>
-    <p>Ces indicateurs confirment que vos données ont été prises en compte.</p>
-
-    <h2>4. Puis-je modifier ou supprimer mes soumissions ?</h2>
-    <p>Oui, vous avez la possibilité de supprimer vos données immédiatement après les avoir soumises. Voici comment :</p>
-    <ul>
-        <li>Une icône de réinitialisation apparaîtra après la soumission.</li>
-        <li>En cliquant sur cette icône, vos données seront complètement supprimées de nos serveurs.</li>
-    </ul>
-    <p>Cependant, une fois que vous fermez l'application web ou que la session expire, les données deviennent irréversiblement anonymisées et ne peuvent plus être modifiées ou supprimées. Veuillez consulter notre <a href="Confidentialité.html">Politique de Confidentialité '5'</a> pour plus d'informations.</p>
-
-    <h2>5. Que se passe-t-il si je fournis des informations incorrectes ?</h2>
-    <p>Nous vous encourageons à soumettre des informations précises et vérifiées pour garantir la qualité des statistiques. Si vous remarquez une erreur après la soumission :</p>
-    <ul>
-        <li>Utilisez l'icône de réinitialisation pour supprimer vos données.</li>
-        <li>Vous pouvez ensuite soumettre les informations corrigées.</li>
+        <li>কোন তথ্য একটি একক ব্যবহারকারীকে চিহ্নিত করা যায় না।</li>
+        <li>আমরা কোন তথ্য সংগ্রহ করি না যা চিহ্নিত করে কে কী জমা দিয়েছে। আপনি নিশ্চিত থাকতে পারেন, আপনার পরিচয় সুরক্ষিত এবং আপনার তথ্য অবিলম্বে একত্রিত করা হয়।</li>
     </ul>
 
-    <h2>6. Pourquoi soutenir GZ ?</h2>
-    <p>Bien que GZ soit gratuit, nous avons besoin de votre soutien pour :</p>
+    <h2>৩. আমি কীভাবে জানতে পারব যে আমার তথ্য জমা হয়েছে?</h2>
+    <p>আপনার তথ্য জমা দেওয়ার পরে:</p>
     <ul>
-        <li>Couvrir les coûts des serveurs et de l'infrastructure.</li>
-        <li>Financer des analyses plus approfondies et des projets futurs qui bénéficieront à tous.</li>
-        <li>Permettre l'amélioration continue de l'application et de ses fonctionnalités.</li>
+        <li>জমা দেওয়ার বোতামটির রঙ পরিবর্তন হবে: জমা দেওয়ার সময় কমলা এবং সফল জমা দেওয়ার পর সবুজ।</li>
+        <li>বোতামের পাঠ্য "জমা দিন" থেকে "জমা দেওয়া হয়েছে" পরিবর্তন হবে।</li>
     </ul>
-    <p>Vous pouvez soutenir notre mission via PayPal ou d'autres moyens de contribution.</p>
+    <p>এই সূচকগুলি নিশ্চিত করে যে আপনার তথ্য বিবেচনায় নেওয়া হয়েছে।</p>
 
-    <h2>7. Pourquoi suivre GZ sur les réseaux sociaux ?</h2>
-    <p>En nous suivant sur les réseaux sociaux, vous pouvez :</p>
+    <h2>৪. আমি কী আমার জমা দেওয়া তথ্য পরিবর্তন বা মুছে ফেলতে পারি?</h2>
+    <p>হ্যাঁ, আপনি জমা দেওয়ার পরে আপনার তথ্য মুছে ফেলার সুযোগ পাবেন। এখানে কীভাবে:</p>
     <ul>
-        <li>Rester informé sur de nouvelles analyses et tendances démographiques.</li>
-        <li>Découvrir des mises à jour régulières sur nos statistiques mondiales.</li>
-        <li>Participer à des discussions éducatives autour des données démographiques mondiales.</li>
+        <li>জমা দেওয়ার পরে একটি রিসেট আইকন প্রদর্শিত হবে।</li>
+        <li>এই আইকনে ক্লিক করে, আপনার তথ্য সম্পূর্ণরূপে আমাদের সার্ভার থেকে মুছে ফেলা হবে।</li>
     </ul>
-    <p>De plus, nous partageons des informations fascinantes dérivées de nos statistiques, tout en vous tenant informé de nos nouveaux projets.</p>
+    <p>যাইহোক, একবার আপনি ওয়েব অ্যাপ্লিকেশনটি বন্ধ করলে বা সেশনটি শেষ হলে, তথ্য অপরিবর্তনীয়ভাবে অজ্ঞাত হয়ে যায় এবং আর পরিবর্তন বা মুছে ফেলা সম্ভব নয়। আরও তথ্যের জন্য আমাদের <a href="Confidentialité.html">গোপনীয়তার নীতি '৫'</a> পর্যালোচনা করুন।</p>
+
+    <h2>৫. যদি আমি ভুল তথ্য প্রদান করি তবে কী হবে?</h2>
+    <p>আমরা আপনাকে সঠিক এবং যাচাইকৃত তথ্য জমা দিতে উৎসাহিত করি যাতে পরিসংখ্যানের গুণমান নিশ্চিত হয়। যদি আপনি জমা দেওয়ার পরে একটি ত্রুটি দেখতে পান:</p>
+    <ul>
+        <li>আপনার তথ্য মুছে ফেলার জন্য রিসেট আইকন ব্যবহার করুন।</li>
+        <li>তারপর আপনি সংশোধিত তথ্য জমা দিতে পারেন।</li>
+    </ul>
+
+    <h2>৬. GZ কে সমর্থন করার কারণ কী?</h2>
+    <p>যদিও GZ বিনামূল্যে, আমাদের আপনার সমর্থন প্রয়োজন:</p>
+    <ul>
+        <li>সার্ভার এবং অবকাঠামোর খরচ কভার করতে।</li>
+        <li>গভীর বিশ্লেষণ এবং ভবিষ্যতের প্রকল্পগুলি অর্থায়ন করতে যা সবার উপকারে আসবে।</li>
+        <li>অ্যাপ্লিকেশন এবং এর বৈশিষ্ট্যগুলির ক্রমাগত উন্নতি করতে।</li>
+    </ul>
+    <p>আপনি PayPal বা অন্যান্য অবদান মাধ্যমের মাধ্যমে আমাদের মিশনকে সমর্থন করতে পারেন।</p>
+
+    <h2>৭. GZ কে সোশ্যাল মিডিয়ায় অনুসরণ করার কারণ কী?</h2>
+    <p>সোশ্যাল মিডিয়ায় আমাদের অনুসরণ করে, আপনি:</p>
+    <ul>
+        <li>নতুন বিশ্লেষণ এবং জনসংখ্যার প্রবণতা সম্পর্কে জানাতে পারবেন।</li>
+        <li>আমাদের বৈশ্বিক পরিসংখ্যানের উপর নিয়মিত আপডেট আবিষ্কার করতে পারবেন।</li>
+        <li>বিশ্বব্যাপী জনসংখ্যার ডেটা নিয়ে শিক্ষামূলক আলোচনা অংশগ্রহণ করতে পারবেন।</li>
+    </ul>
+    <p>এছাড়াও, আমরা আমাদের পরিসংখ্যান থেকে উদ্ভূত মজার তথ্য শেয়ার করি, এবং আমাদের নতুন প্রকল্পগুলির সম্পর্কে আপনাকে জানিয়ে রাখি।</p>
 </div>
 
 <footer>
-    <p>©️ 2025 GZ</p>
+    <p>©️ ২০২৫ GZ</p>
 </footer>
 </body>
 </html>
