--- a/pagedetraduction.html
+++ b/pagedetraduction.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bn">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,64 +7,64 @@
     <link href="https://fonts.googleapis.com/css2?family=Billabong&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: #f5f5f5; /* Light background color */
+            background-color: #f5f5f5; /* উজ্জ্বল পটভূমি রঙ */
             margin: 0;
             padding: 0;
-            color: #333; /* Text color */
-            font-family: 'Roboto', Arial, sans-serif; /* Use a similar font */
+            color: #333; /* টেক্সটের রঙ */
+            font-family: 'Roboto', Arial, sans-serif; /* অনুরূপ ফন্ট ব্যবহার করুন */
         }
         header {
-            background-color: #ffffff; /* White background */
+            background-color: #ffffff; /* সাদা পটভূমি */
             padding: 5px 10px;
             display: flex;
             align-items: center;
             justify-content: space-between;
             height: 50px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Light shadow */
-            max-width: 1200px; /* Limite la largeur du conteneur */
-            margin: 0 auto; /* Centre le conteneur */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* হালকা ছায়া */
+            max-width: 1200px; /* কন্টেইনারের প্রস্থ সীমিত করুন */
+            margin: 0 auto; /* কন্টেইনারকে কেন্দ্রিত করুন */
         }
         h1 {
             margin: 0;
-            font-size: 1.3em; /* Adjusted font size */
+            font-size: 1.3em; /* ফন্ট সাইজ সামঞ্জস্য */
             font-family: 'Billabong', cursive;
-            color: #007BFF; /* Blue color */
+            color: #007BFF; /* নীল রঙ */
         }
         .logo-genz {
-            border: 1.5px solid #007BFF; /* Blue border */
-            padding: 3px 6px; /* Reduced padding */
+            border: 1.5px solid #007BFF; /* নীল বর্ডার */
+            padding: 3px 6px; /* প্যাডিং কমানো */
             display: inline-block;
             border-radius: 7px;
             white-space: nowrap;
         }
         .divider {
             height: 1px;
-            background-color: #007BFF; /* Blue border */
+            background-color: #007BFF; /* নীল বর্ডার */
             width: 100%;
-            margin-top: 0; /* Remove top margin */
+            margin-top: 0; /* উপরের মার্জিন বাদ দিন */
         }
         .divider-text {
             text-align: center;
-            color: #333; /* Text color */
+            color: #333; /* টেক্সটের রঙ */
             font-size: 0.9em;
             margin: 10px 0; 
         }
         footer {
             text-align: center;
-            color: #333; /* Text color */
+            color: #333; /* টেক্সটের রঙ */
             margin: 20px 0;
             font-size: 0.8em;
         }
-        /* Style pour le menu déroulant */
+        /* ড্রপডাউন মেনুর স্টাইল */
         #language-selector {
-            margin-left: auto; /* Pousse le menu à droite */
-            padding: 3px; /* Réduit le padding intérieur */
+            margin-left: auto; /* মেনুকে ডান দিকে ঠেলুন */
+            padding: 3px; /* অভ্যন্তরীণ প্যাডিং কমান */
             border: 1px solid #007BFF;
             border-radius: 5px;
             font-size: 0.9em;
             color: #333;
-            background-color: #ffffff; /* White background */
-            width: 105px; /* Définir la largeur */
+            background-color: #ffffff; /* সাদা পটভূমি */
+            width: 105px; /* প্রস্থ নির্ধারণ করুন */
         }
     </style>
     <script>
@@ -84,18 +84,17 @@
         <h1 class="logo-genz" translate="no">GZ</h1>
     </a>
     <select id="language-selector" onchange="changeLanguage()">
-        <option value="" disabled selected>Language</option>
+        <option value="" disabled selected>ভাষা</option>
         <option value="https://www.g-z.online/">English</option>
-        
     </select>
 </header>
 
 <div class="divider"></div>
-<div class="divider-text">Page de traduction</div>
+<div class="divider-text">অনুবাদ পৃষ্ঠা</div>
 <div class="divider"></div>
 
 <footer>
-    <p></p> <!-- Suppression de la section copyright -->
+    <p></p> <!-- কপিরাইট সেকশন মুছে ফেলা -->
 </footer>
 
 </body>
